openpearl-code/testsuite/must_not_compile/01_typeFixed/004_length_fixed_wrongvalue.expect
004_length_fixed_wrongvalue.prl:4:15: ERROR : Syntax error :mismatched input '+' expecting ')'
LENGTH FIXED (1+2);
               ^
