openpearl-code/testsuite/must_not_compile/01_typeFixed/004_length_fixed_wrongvalue.prl
MODULE(m1);

PROBLEM;
LENGTH FIXED (1+2);

MODEND;

